# basic-task

./: main.py  manager.py  pyproject.toml  trials.py
configs/: fleabottom.py
server/: index.html
