[project]
name = "basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "experiment",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "pandas>=2.3.3",
    "pyserial>=3.5",
]

[tool.uv.sources]
experiment = { git = "https://www.github.com/jselvan/experiment", rev = "b3915135ea920e3b999caf98760b0254ec1b012c" }
